tests/base/invalid/SetComprehension_CompileFail_1.whiley


void ::main(System.Console sys):
    xs = { 1,2,3,4 }
    zs = { x | y ∈ xs }
    sys.out.println(Any.toString(xs))
    sys.out.println(Any.toString(zs))
